k8s_resource/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-web-deployment
  labels:
    app: stock-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: stock-web
  template:
    metadata:
      labels:
        app: stock-web
    spec:
      containers:
      - name: stock-web
        image: stock-web:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          protocol: TCP
      tolerations:
        - key: "node-role.kubernetes.io/master"
          effect: "NoSchedule"
          operator: "Exists"
