k8s_resource/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stock-web-service
spec:
  selector:
    app: stock-web
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30001
  type: NodePort
